# ai-stack

./: Makefile  README.md  main.py  pyproject.toml
docker/: Dockerfile.api  Dockerfile.docs  Dockerfile.ui
